[package]
name = "wolf3d-rs"
version = "0.1.0"
edition = "2021"
description = "Wolfenstein 3D ported to Rust"
authors = ["Noah Lively"]

[[bin]]
name = "wolf3d"
path = "src/main.rs"

[dependencies]
# Windowing & framebuffer
winit = "0.30"
pixels = "0.15"

# serde for json deserialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

# Audio
rodio = { version = "0.19", default-features = false, features = ["wav"] }

# Binary data parsing
byteorder = "1.5"

# Error handling
thiserror = "2"
anyhow = "1"

# Logging
log = "0.4"
env_logger = "0.11"

# Image writing
image = "0.23"

[profile.release]
opt-level = 3
lto = true

[features]
default = ["wolf3d"]

wolf3d = []
spear = []
goodtimes = []